<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_beranda" android:title="@string/beranda"/>
        <item android:id="@+id/nav_profile" android:title="@string/profile"/>
        <item android:id="@+id/nav_khs" android:title="@string/khs"/>
        <item android:id="@+id/nav_jadwal" android:title="@string/jadwal"/>
        <item android:title="@string/tugas" android:id="@+id/nav_tugas"/>
        <item android:title="@string/presensi" android:id="@+id/nav_presensi"/>
        <item android:title="@string/beasiswa" android:id="@+id/nav_beasiswa"/>
        <item android:title="@string/logout" android:id="@+id/nav_logout"/>
    </group>

</menu>
