<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileP">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/layout1" android:gravity="center">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp" app:srcCompat="@drawable/mhs" android:id="@+id/fotoku"
                    android:contentDescription="TODO" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="20dp">
                <TextView
                        android:text="@string/nav_header_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                        android:textSize="20sp" android:textStyle="bold" android:layout_marginStart="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat"/>
                <TextView
                        android:text="@string/NIM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                        android:textStyle="bold" android:layout_marginStart="10dp"
                />
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/Status_mahasiswa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:gravity="center"/>
        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider"
        />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/prental"
                android:gravity="top|center_horizontal|center">
            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_margin="45dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="top|center_horizontal">

                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="Alamat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView51"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="Bantul, Yogyakarta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView61"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="TTL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView52"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView62"
                            android:text="Yogyakarta, 12 Agustus 1999" android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="Agama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView53"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="Islam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView63"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="Jenis Kelamin "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView54"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="Laki-laki"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView64"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="Asal SLTA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView55"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="SMAN 1 Yogyakarta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView65"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="Nama Orang Tua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView56"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="Pijo / Wiwin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView66"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="Warga Negara"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView57"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="WNI"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView67"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="No. Telpon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView58"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                    <TextView
                            android:text="0821000000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView68"
                            android:textSize="12sp"
                            android:padding="4dp"/>
                </TableRow>
            </TableLayout>
            <Button
                    android:text="@string/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/LogoutButton"
                    android:background="@android:color/holo_blue_light" android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>